struct RequiredField {
  1: required string name
}
